test/tests/compiler/8_loops/valid/extra_credit/post_exp_incr.plx
pub fn main(none) i32 {
    product: i32 = 1
    loop i: i32 = 0 while i < 10 .. i++ {
        product = product + 2
    }
    return product
}
