test/tests/compiler/8_loops/invalid_parse/plx1_post_while_no_block_1.plx
pub fn main(none) i32 {
    i: i32 = 0
    loop .. while i < 10 return 0
}
